// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly, count all 1`] = `
<div
  id="feedreader-entry-counts"
>
  <h2>
    All 
    (4)
  </h2>
  <div>
    <React.Fragment
      key="0"
    >
      <h3>
        Group One
         
        (2)
      </h3>
      <div>
        <p
          className=""
          key="0"
        >
          Feed One
           (
          2
          )
        </p>
      </div>
    </React.Fragment>
    <React.Fragment
      key="1"
    >
      <h3>
        Group Two
         
        (2)
      </h3>
      <div>
        <p
          className=""
          key="1"
        >
          Feed Two
           (
          2
          )
        </p>
      </div>
    </React.Fragment>
  </div>
</div>
`;

exports[`renders correctly, count unread 1`] = `
<div
  id="feedreader-entry-counts"
>
  <h2>
    All 
    (2)
  </h2>
  <div>
    <React.Fragment
      key="0"
    >
      <h3>
        Group One
         
        (2)
      </h3>
      <div>
        <p
          className=""
          key="0"
        >
          Feed One
           (
          2
          )
        </p>
      </div>
    </React.Fragment>
    <React.Fragment
      key="1"
    >
      <h3>
        Group Two
         
      </h3>
      <div />
    </React.Fragment>
  </div>
</div>
`;
